src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Total_Finders_Fees_Claims__c</fullName>
        <inlineHelpText>Total called in Finder Fees claims</inlineHelpText>
        <label>Total Finder&apos;s Fees Claims</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hotel_Claims__c</fullName>
        <description>Total called in hotel claims</description>
        <inlineHelpText>Total called in hotel claims</inlineHelpText>
        <label>Total Hotel Claims</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Housing_Claims__c</fullName>
        <description>Total called in housing claims</description>
        <inlineHelpText>Total called in housing claims</inlineHelpText>
        <label>Total Housing Claims</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Catastrophe</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>FEMA</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Landlord</fullName>
                </value>
                <value>
                    <fullName>Lawyer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Policyholder</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Restoration</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>TPA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Claim_Handled__c</fullName>
        <label>Type of Claim Handled</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Homeowner</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
                <value>
                    <fullName>Multi Line</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utilities__c</fullName>
        <label>Utilities</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Included</fullName>
                </value>
                <value>
                    <fullName>Not Included</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Type__c</fullName>
        <label>Vendor Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appliance</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Cleaning</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Dry Cleaner</fullName>
                </value>
                <value>
                    <fullName>Furniture</fullName>
                </value>
                <value>
                    <fullName>Houseware</fullName>
                </value>
                <value>
                    <fullName>Moving</fullName>
                </value>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Pet Boarding</fullName>
                </value>
                <value>
                    <fullName>Restoration</fullName>
                </value>
                <value>
                    <fullName>Utility</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volume_of_Claims__c</fullName>
        <inlineHelpText>Volume of Claims per Month</inlineHelpText>
        <label>Volume of Claims</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1-2</fullName>
                </value>
                <value>
                    <fullName>3-5</fullName>
                </value>
                <value>
                    <fullName>6-10</fullName>
                </value>
                <value>
                    <fullName>11+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_Pay_Deposit__c</fullName>
        <label>Will Pay Deposit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Refundable Only</fullName>
                </value>
                <value>
                    <fullName>Non Refundable Only</fullName>
                </value>
                <value>
                    <fullName>Refundable &amp; Non Refundable</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Will Not Pay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X30_Day_Adjuster_Follow_Up__c</fullName>
        <formula>IF(((TODAY()- Max_of_two_dates__c) == 29),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>30 Day Adjuster Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X60_Day_Adjuster_Follow_Up__c</fullName>
        <formula>IF(((TODAY()- Max_of_two_dates__c) == 59),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>60 Day Adjuster Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X90_Day_Adjuster_Follow_Up__c</fullName>
        <formula>IF(((TODAY()- Max_of_two_dates__c) == 89),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>90 Day Adjuster Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Z_Number__c</fullName>
        <description>For the Migration Vendor ID</description>
        <displayFormat>V{00000}</displayFormat>
        <label>Z_Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>iContactforSF__iContact_Contact_Id__c</fullName>
        <description>The iContact Contact Id associated with this Contact.</description>
        <label>iContact Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>myfaxv3__DeliveryType__c</fullName>
        <inlineHelpText>When using the Mass Fax &amp; Email functionality from MyFax, this field represents the contact&apos;s preferred method of communication, which can be either or both of Fax and Email.</inlineHelpText>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fax</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax &amp; Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi__Needs_Score_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Pardot Scoring Categories. Indicates that new scores will soon be synced from Pardot for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Needs Score Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Last_Scored_At__c</fullName>
        <description>Used for Pardot Scoring Categories. Indicates the last time a Scoring Category score was updated for this contact.

            Scoring Categories are used for multi-product engagement scoring in Pardot and are available to customers using Pardot Pro Edition and Pardot Ultimate Edition. Please visit this page for more information on this feature and how to set up Salesforce to view these scores: http://help.pardot.com/customer/portal/articles/2396977-scoring-categories-overview</description>
        <label>Pardot Last Scored At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__campaign__c</fullName>
        <description>The Pardot Campaign represents the first marketing touch with a prospect. It may be a campaign associated with your web site, landing page, paid search initiative, or any other marketing effort. Prospects may only be associated with one Pardot campaign. This value can later be changed manually or via an Automation Rule.</description>
        <label>Pardot Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__comments__c</fullName>
        <label>Pardot Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__conversion_date__c</fullName>
        <description>The date and time of the form, form handler, or landing page submission when a Pardot tracked anonymous visitor first became a known prospect.</description>
        <label>Pardot Conversion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_name__c</fullName>
        <description>This is the name of the object (form, form handler, landing page, or video form) that converted an anonymous visitor into a named prospect.</description>
        <label>Pardot Conversion Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__conversion_object_type__c</fullName>
        <description>The type of object which converted an anonymous visitor into a named prospect (form, form handler, landing page, or video form).</description>
        <label>Pardot Conversion Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__created_date__c</fullName>
        <description>The Pardot created date represents the date and time at which the Prospect record was created in Pardot. This will often differ from your Salesforce.com created date.</description>
        <label>Pardot Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_activity__c</fullName>
        <label>Pardot First Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__first_search_term__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the search term.</description>
        <label>Pardot First Referrer Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_search_type__c</fullName>
        <description>If a Prospects first touch was the result of a search, this field contains the type of search conducted.</description>
        <label>Pardot First Referrer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__first_touch_url__c</fullName>
        <description>The value of the referrer for the first tracked request made by a Prospect.</description>
        <label>Pardot First Referrer</label>
        <length>65000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__grade__c</fullName>
        <description>The Pardot grade is based on how well a prospect fits your organization&apos;s ideal customer profile. Explicit factors such as company size, industry, job title and more help determine this value. A combination of grade (explicit) and score (implicit) can be used to very effectively optimize the sales team&apos;s time. Grade, like score, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__last_activity__c</fullName>
        <label>Pardot Last Activity</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pi__notes__c</fullName>
        <label>Pardot Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pi__pardot_hard_bounced__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that determines whether contact hard bounced.</description>
        <label>Pardot Hard Bounced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__score__c</fullName>
        <description>The Pardot score is based on implicit buying signals a lead demonstrates through his or her activities and responses to your marketing efforts. The higher the score, the more active the lead has been. A combination of score (implicit buying signals) and grade (explicit factors) helps you prioritize your prospects. Score, like grade, is calculated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pi__url__c</fullName>
        <description>This link takes you directly into the relevant prospect&apos;s profile within Pardot. From there you can view his or her complete activity history. This URL is generated within the Pardot system and cannot be edited in Salesforce.com.</description>
        <label>Pardot URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>pi__utm_campaign__c</fullName>
        <label>Google Analytics Campaign</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_content__c</fullName>
        <label>Google Analytics Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_medium__c</fullName>
        <label>Google Analytics Medium</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_source__c</fullName>
        <label>Google Analytics Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__utm_term__c</fullName>
        <label>Google Analytics Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptc_password__c</fullName>
        <description>PlaceTrakCenter password</description>
        <label>ptc_password</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ptc_password_salt__c</fullName>
        <description>PlaceTrakCenter password salt</description>
        <label>ptc_password_salt</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smagicinteract__SMSOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SMS Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Domain__c</fullName>
        <label>Domain</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Email_Status__c</fullName>
        <formula>IF(tdc_tvte__success__c == true,
CASE(tdc_tvte__Result__c, &apos;deliverable&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/Deliverable.png&apos;, &apos;Deliverable&apos;),&apos;risky&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/Risky.png&apos;, &apos;Risky&apos;),
&apos;undeliverable&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/Undeliverable.png&apos;, &apos;Not Deliverable&apos;), &apos;unknown&apos;, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/Unknown.png&apos;, &apos;Unknown&apos;), tdc_tvte__Result__c) + &apos; &apos; + BR() + tdc_tvte__did_you_mean__c
, IMAGE(&apos;/resource/tdc_tvte__VTMMessage/Notverified.png&apos;, &apos;Not Verified Yet&apos;))</formula>
        <label>Email Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Empty__c</fullName>
        <formula>IF(tdc_tvte__success__c == true, 

CASE(tdc_tvte__Result__c, &apos;deliverable&apos;, &apos;Verified&apos;, 

&apos;undeliverable&apos;, &apos;Verified&apos;, 

&apos;risky&apos;, &apos;Verified&apos;, 

&apos;unknown&apos;, &apos;Verified&apos;, tdc_tvte__Result__c) 

, &apos;Not Verified&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Legend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tdc_tvte__Preferred_Email__c</fullName>
        <label>Preferred Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Reason__c</fullName>
        <label>Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Result__c</fullName>
        <label>Result</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Result_text__c</fullName>
        <formula>IF(tdc_tvte__success__c == true,  

CASE(tdc_tvte__Result__c, &apos;deliverable&apos;,  &apos;Deliverable&apos;, 

&apos;undeliverable&apos;,  &apos;Non-Deliverable&apos;, 

&apos;risky&apos;,  &apos;Risky&apos;, 

&apos;unknown&apos;,  &apos;Unknown&apos;, tdc_tvte__Result__c) 

, &apos;Not Verified Yet&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Legend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__Sendex__c</fullName>
        <label>Sendex</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__StatusOfEmailVerification__c</fullName>
        <formula>IF(tdc_tvte__success__c == true, 
CASE(tdc_tvte__Result__c, &apos;deliverable&apos;, IMAGE(&apos;/resource/tdc_tvte__Verified/Deliverable.png&apos;, &apos;Deliverable&apos;), &apos;risky&apos;, IMAGE(&apos;/resource/tdc_tvte__Verified/Risky.png&apos;, &apos;risky&apos;),
&apos;undeliverable&apos;, IMAGE(&apos;/resource/tdc_tvte__Verified/Undeliverable.png&apos;, &apos;Not Deliverable&apos;), &apos;unknown&apos;, IMAGE(&apos;/resource/tdc_tvte__Verified/Unknown.png&apos;, &apos;Unknown&apos;),tdc_tvte__Result__c) 
, IMAGE(&apos;/resource/tdc_tvte__Verified/Notverified.png&apos;, &apos;Not Verified Yet&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Of Email Verification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__accept_all__c</fullName>
        <defaultValue>false</defaultValue>
        <label>accept all</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__did_you_mean__c</fullName>
        <label>Did you mean</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__disposable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>disposable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__email__c</fullName>
        <label>email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__free__c</fullName>
        <defaultValue>false</defaultValue>
        <label>free</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__message__c</fullName>
        <label>message</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>role</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tdc_tvte__success__c</fullName>
        <defaultValue>false</defaultValue>
        <label>success</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AICAGolfEvent_d_2</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>No__c</columns>
        <columns>Date_of_Last_Deal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN_MEMBER.STATUS</field>
            <operation>equals</operation>
            <value>Responded</value>
        </filters>
        <label>AICA Golf Event</label>
        <sharedTo>
            <group>Team3</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CCNCemail2008</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Do_Not_Email__c</columns>
        <columns>Type__c</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>contains</operation>
            <value>@</value>
        </filters>
        <filters>
            <field>Do_Not_Email__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>notEqual</operation>
            <value>Public</value>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS2_STATE</field>
            <operation>equals</operation>
            <value>CA,NV</value>
        </filters>
        <label>CCNC email 2008</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HoustonTXCompanies</fullName>
        <booleanFilter>1 AND (2 AND 3)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Total_Claims__c</columns>
        <columns>No__c</columns>
        <columns>CONTACT.LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.ADDRESS2_STATE</field>
            <operation>contains</operation>
            <value>TX</value>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS1_ZIP</field>
            <operation>greaterOrEqual</operation>
            <value>77000</value>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS1_ZIP</field>
            <operation>lessOrEqual</operation>
            <value>77999</value>
        </filters>
        <label>Houston, TX Companies</label>
        <sharedTo>
            <group>Team4</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JanaNBAemail</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 and 6)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Status__c</columns>
        <columns>CONTACT.ADDRESS1_ZIP</columns>
        <columns>CONTACT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>contains</operation>
            <value>@</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Allstate,Certified Adjustment,CSAA,Encompass,Shelter,USAA</value>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS1_ZIP</field>
            <operation>greaterOrEqual</operation>
            <value>90000</value>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS1_ZIP</field>
            <operation>lessOrEqual</operation>
            <value>93599</value>
        </filters>
        <label>Jana NBA email</label>
        <sharedTo>
            <group>Team2</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JanaSoCalwildfires</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and (6 and 7)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Do_Not_Email__c</columns>
        <columns>CONTACT.ADDRESS1_STATE</columns>
        <columns>CONTACT.ADDRESS1_ZIP</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>contains</operation>
            <value>@</value>
        </filters>
        <filters>
            <field>Do_Not_Email__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Allstate,Certified Adjustment,CSAA,Encompass,Shelter,USAA</value>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS1_ZIP</field>
            <operation>greaterOrEqual</operation>
            <value>90000</value>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS1_ZIP</field>
            <operation>lessOrEqual</operation>
            <value>93599</value>
        </filters>
        <label>Jana So Cal wildfires</label>
        <sharedTo>
            <group>Team1</group>
            <group>Team2</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>KatieIYAwholeteam</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Do_Not_Email__c</columns>
        <columns>Status__c</columns>
        <columns>Date_of_Last_Deal__c</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Allstate,Certified Adjustment,CSAA,Encompass,Shelter,Safeco</value>
        </filters>
        <filters>
            <field>Do_Not_Email__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS2_STATE</field>
            <operation>equals</operation>
            <value>OH,KY,IL,IN,TN,MI</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>contains</operation>
            <value>@</value>
        </filters>
        <label>Katie IYA whole team</label>
        <sharedTo>
            <group>Team5</group>
            <group>Team6</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarisaCCNC2008email</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5 and 6 AND 7 AND NOT (8 AND 9)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Status__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Type__c</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>contains</operation>
            <value>@</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>notEqual</operation>
            <value>Public</value>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS1_STATE</field>
            <operation>equals</operation>
            <value>AZ,CA</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>America First Insurance,Certified Adjusting,Colorado Casualty,Dietz,Hawkeye</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Liberty Mutual,Liberty Northwest,Montgomery Insurance,Ohio Casualty,Peerless</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Safeco</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>AAA,CSAA</value>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS1_STATE</field>
            <operation>equals</operation>
            <value>CA</value>
        </filters>
        <label>Marisa CCNC 2008 email</label>
        <sharedTo>
            <group>Team1</group>
            <group>Team2</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MarisaNBAemail</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 and 6)</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Status__c</columns>
        <columns>CONTACT.ADDRESS1_ZIP</columns>
        <columns>CONTACT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CONTACT.EMAIL</field>
            <operation>greaterOrEqual</operation>
            <value>@</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>Allstate,Certified Adjustment,CSAA,Encompass,Shelter,USAA</value>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS1_ZIP</field>
            <operation>greaterOrEqual</operation>
            <value>90000</value>
        </filters>
        <filters>
            <field>CONTACT.ADDRESS1_ZIP</field>
            <operation>lessOrEqual</operation>
            <value>93599</value>
        </filters>
        <label>Marisa NBA email</label>
        <sharedTo>
            <group>Team2</group>
        </sharedTo>
    </listViews>
</CustomObject>